# surface-

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
app/: CMakeLists.txt  app.cc
resources/: __init__.py
resources/blueprints/: ball_blueprint.py  cube_blueprint.py  particle_system_blueprint.py  scene_blueprint.py
resources/objects/sphere/: sphere.mtl
resources/objects/sphere/debug/: sphere.mtl
src/: CMakeLists.txt  camera.cc  camera.h  input.cc  input.h  log.cc  log.h  mesh.h  model.cc  model.h  shader.cc  shader.h  text_renderer.cc  text_renderer.h
src/ai/: action.cc  action.h  node.cc  node.h  planner.cc  planner.h  world_state.cc  world_state.h
src/ai/actions/: ai_action_follow.cc  ai_action_follow.h  ai_action_none.cc  ai_action_none.h
src/audio/: audio.cc  audio.h
src/embeddings/: embeddings.h
src/jobs/: task.h  task_base.h  task_handle.h  task_handle_base.h  task_manager.cc  task_manager.h  task_worker.cc  task_worker.h
src/locks/: lock_base.h  lock_test.h  reentrant_lock.cc  reentrant_lock.h  scoped_lock.h  spin_lock.cc  spin_lock.h  unnecessary_lock.h
src/objects/: custom_geometry_object.cc  modeled_object.cc  object.cc  object.h  third_person_character.cc
src/particles/: particle.h  particle_controller.cc  particle_controller.h  particle_renderer.cc  particle_renderer.h  particles.cc
src/renderer/: framebuffer.cc  framebuffer.h  renderer.cc  renderer.h
src/scene/: components.h  entity.cc  entity.h  scene.cc  scene.h  scene_serializer.cc  scene_serializer.h  uuid.cc  uuid.h
src/shaders/: lamp_fs.glsl  lamp_vs.glsl  main_fs.glsl  main_vs.glsl  object_fs.glsl  object_vs.glsl  particle_fs.glsl  particle_vs.glsl  text_fs.glsl  text_vs.glsl
tools/: CMakeLists.txt  editor.cc  editor.h  gui.cc  gui.h
